Added new A3 for an alternative presentation
Not sure about A2 and A3:
may be A2 for dev, A3 for alternative presentation (or vice versa)?

--- a/WEBSITE/A3/PPT/SliteShow_PitchDeck.pptx.html/img15.html
+++ b/WEBSITE/A3/PPT/SliteShow_PitchDeck.pptx.html/img15.html
@@ -3,25 +3,29 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Business Model and Monitization</title>
+  <title>Slite: Market</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
+  <style>
+  	li{
+  		padding-top: 3px;
+  	}
+  </style>
 </head>
 <body>
 <center>
-	<div class="title" style='padding-top: 20px'>BUSINESS MODEL</div>
-	<div class="slideBody">
-		<ul>
-	      <li>SAAS (direct sales from website)</li>
-	      <li>WHITE LABELING (licensing of internal Intranet solution)</li>
-		</ul>
-	</div>
-	<div class="title" style='padding-top: 20px'>MONITIZATION</div>
-	<div class="slideBody">
-		<ul>
-	      <li>FREEMEUM (B2C)</li>
-	      <li>IN SLIDE ADS (350 slides / sec)</li>
-	     <li>SECURED ENTERPRISE SOLUTION PACKAGES (B2B)</li>
-		</ul>
+	<div class="title" style='padding-top:10px;padding-bottom:10px;'>MARKET</div>
+	<div class="slideBody" style='with: 100%; padding: 0px'>
+		<div>
+			<img src="../img/slite_market.gif" style='width: 48%; height: 70%; float: left'>
+			<img src="../img/WebConferencing_Market_Forecast.jpg" style='width: 48%; height: 70%; margin-top:10%; float:right'>
+		</div>
+
+		<div  sytle='clear: both'></div>
+		 
+		 <div style='clear: both; text-align: center; padding-top: 5px;'>     	
+			 <div style='font-size: 20px;'>Source: Gartner 2Q13</div>
+		     <!--<div style='padding-top: 0px; margin-top: 2px; margin-bottom: 2px;'>Target: 3.5% of the market in 24 month = <b>$175 million</b></div>-->
+		</div>
 	</div>
 </center>
 </body>
