--- a/WEBSITE/A3/PPT/SliteShow_PitchDeck.pptx.html/img4.html
+++ b/WEBSITE/A3/PPT/SliteShow_PitchDeck.pptx.html/img4.html
@@ -21,16 +21,18 @@
 	<div class="slideBody">
 		<img src="../img/Slite_ShareSlide.gif" alt="slite share diagram" style='padding: 0px; padding-right:120px; width: 743px; height: 202px'/>
 		<ul>
-	      <li>NEW <b>PATENTED</b> PARADIGM!</li>
+	      <li>ONLINE PORTAL FOR <u>LIVE</u> PRESENTATIONS</li>
+	         <ul>
+	           <li>upload, create</li>
+			   <li>present to the whole world live</li>
+			   <li>interact: comment, vote, like, share</li> 
+			   <li>store notes with presentation</li>
+	        </ul>
+	      <!--<li>NEW <b>PATENTED</b> PARADIGM!</li>
 		      <ul>
 		           <li>slide = WEBPAGE = window into the world</li>
 		      </ul>
-	      <li>ONLINE PORTAL</li>
-	         <ul>
-	           <li>create, present, distribute</li>
-	           <li>social community</li>
-	        </ul>
-	     </li>
+	     </li>-->
 		</ul>
 	</div>
 </center>
