--- a/WEBSITE/A3/PPT/SliteShow_PitchDeck.pptx.html/img5.html
+++ b/WEBSITE/A3/PPT/SliteShow_PitchDeck.pptx.html/img5.html
@@ -159,37 +159,7 @@
   font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
   </td>
  </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Presentation composer</span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td></td>
-  <td></td>
- </tr>
- <tr style='height:15.75pt'>
+  <tr style='height:15.75pt'>
   <td>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'><span style='font-family:"Arial","sans-serif"'>Comments: Live / After
@@ -343,33 +313,36 @@
  <tr style='height:15.75pt'>
   <td>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Integration with other
-  applications</span></p>
+  normal'><span style='font-family:"Arial","sans-serif"'>Live voting</span></p>
   </td>
+  <td>
+  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
+  text-align:center;line-height:normal'><span style='font-size:12.0pt;
+  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'></span></p>
+  </td>
+  <td>
+  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
+  text-align:center;line-height:normal'><span style='font-size:12.0pt;
+  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'></span></p>
+  </td>
+  <td>
+  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
+  text-align:center;line-height:normal'><span style='font-size:12.0pt;
+  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'></span></p>
+  </td>
+  <td>
+  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
+  text-align:center;line-height:normal'><span style='font-size:12.0pt;
+  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'></span></p>
+  </td>
+  <td></td>
+  <td></td>
+  <td></td>
   <td>
   <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
   text-align:center;line-height:normal'><span style='font-size:12.0pt;
   font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
   </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
  </tr>
  <tr style='height:15.75pt'>
   <td>
@@ -423,36 +396,36 @@
  <tr style='height:15.75pt'>
   <td>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Presets</span></p>
+  normal'><span style='font-family:"Arial","sans-serif"'>Infinite data per slide</span></p>
   </td>
   <td>
   <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
   text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
+  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'></span></p>
   </td>
   <td>
   <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
   text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
+  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'></span></p>
   </td>
   <td>
   <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
   text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
+  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'></span></p>
   </td>
   <td></td>
   <td></td>
   <td>
   <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
   text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
+  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'></span></p>
   </td>
+  <td></td>
   <td>
   <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
   text-align:center;line-height:normal'><span style='font-size:12.0pt;
   font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
   </td>
-  <td></td>
  </tr>
  <tr style='height:15.75pt'>
   <td>
