--- a/WEBSITE/A3/PPT/SliteShow_PitchDeck.pptx.html/img17.html
+++ b/WEBSITE/A3/PPT/SliteShow_PitchDeck.pptx.html/img17.html
@@ -3,26 +3,19 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Asking</title>
+  <title>Slite: Mission</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
+  <style type="text/css">
+  	.middle{
+  		width: ;
+  	}
+  </style>
 </head>
 <body>
 <center>
-	<div class="title">ASKING</div>
-	<div class="slideBody">
-		<ul>
-	      <li>$750,000 for 12 month</li>
-		      <ul>
-			      <li>$500,000 for software development</li>
-			      <li>$100,000 for business development</li>
-			      <li>$150,000 for fees and infrastructure</li>
-		  	</ul>
-	      <li>Expected Launch: 6 month</li>
-	      <li>Break Even: 18 month</li>
-	  </ul>
-
-	<!--<img src="../img/slite_timeline.jpg" style='width: 800px; height: 300px;'>-->
-	</div>
+	<div style='font-size: 60px; padding: 50px;'>We disruptively redefine the presentation industry!</div>
+	<div style='font-size: 50px'><b>More</b> then what Airbnb did for hotel industry.</div>
+	<center><img src="../img/SliteLogo_Subtitle.gif" alt="slite logo" style='width: 300px; height: 150px; padding-top: 100px'></center>
 </center>
 </body>
 </html>
