--- a/WEBSITE/A3/PPT/SliteShow_PitchDeck.pptx.html/img8.html
+++ b/WEBSITE/A3/PPT/SliteShow_PitchDeck.pptx.html/img8.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Embedded Website 1</title>
+  <title>Slite: Embedded Website 2</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
   <style>
     body, html, center {
@@ -12,6 +12,6 @@
   </style>
 </head>
 <body>
-  <iframe style="overflow:hidden" height="100%" width="100%" framborder="3" src="http://en.wikipedia.org/wiki/Microsoft_PowerPoint"></iframe>
+ <iframe style="overflow:hidden" height="100%" width="100%" src="http://www.costco.com/Microsoft-Surface-Pro-3-Bundle-%7c-Office-365-Personal-%7c-Intel-Core-i5-%7c-Windows-8.1-Professional.product.100139457.html"></iframe>
 </body>
 </html>
