fixes to drawing and laser.

--- a/WEBSITE/a1/index.html
+++ b/WEBSITE/a1/index.html
@@ -221,7 +221,8 @@
 	         not create a horizontal scroll bar. */
 	      width: 2%;
 	      overflow: hidden;
-	      position: relative;
+        visibility: hidden;
+	      position: absolute;
 	      left:0px;
 	      top:0px;
 	      z-index: 2;
