--- a/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img12.html
+++ b/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img12.html
@@ -3,19 +3,25 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Presnter Control</title>
+  <title>Slite: Other features</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
 </head>
 <body>
 <center>
-	<div class="title">FEATURES: PRESENTER CONTROL</div>
-	<div style="font-size:40px; font-weight: bold">smartphone app</div>
-	<div class="slideBody">
+	<div class="title">OTHER FEATURES</div>
+	<div class="slideBody" style='font-size:45px; line-height:55px;'>
 		<ul>
-	      <li>LASER POINTER</li>
-	      <li>DRAWING</li>
-	     <li>CLIKCER</li>
-	     <li>VOICE COMMANDS</li>
+			<li>Video Conferencing</li>
+			<li>Social: like, comment, share</li>
+			<li>Close Captioning</li>
+			<li>Live translation into any language</li>
+			<li>Free remote control iPhone app</li>
+				<ul>
+					<li>laser pointer</li>
+					<li>drawing</li>
+					<li>clicker</li>
+					<li>voice control</li>
+				</ul>
 		</ul>
 	</div>
 </center>
