--- a/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img3.html
+++ b/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img3.html
@@ -13,21 +13,21 @@
 </head>
 <body>
 <center>
-	<div class="title">PAIN POINTS</div>
+	<div class="title">PAIN POINTS FOR PRESENTATIONS</div>
 	<div class="slideBody" style='font-size:55px; line-height: 65px'>
 		<ul>
-				<li>Need to have projector <u>and</u> rent conference room to present</li>
-				<li>Frastration with software, hardware setup</li>
+				<li>Need to rent projector and rent conference room</li>
+				<li>Frastration with hardware and software setup</li>
 			      <ul>
 			      	<!--<li>15% lost on setup instead of content</li>
 			      	<li><span style='font-size:30px'><b>$11 billion annually</b> in US loss ONLY on setup issues</span></li>
 			      	<li>A year of your life (avg) is wasted in unproductive meetings</li>-->
 			      </ul>
-				<li>No necessary-for-business Web 2.0 features</li>
-		      	<ul style='font-size:30px;'>
+				<li>No Web 2.0 features</li>
+		      	<!--<ul style='font-size:30px;'>
 		      		<li>Commenting, Interactive, Sharing</li>
-		      	</ul>
-				<li>... and 20 more</li>
+		      	</ul>-->
+				<li style='padding-top:40px; font-size:50px'>... (many more: everyone have problems with how it works now)</li>
 		</ul>
 	</div>
 </center>
