--- a/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img4.html
+++ b/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img4.html
@@ -19,21 +19,25 @@
 <center>
 	<div class="title" style='padding-bottom: 10px; margin-bottom: 10px;'>SOLUTION: SLITE</div>
 	<div class="slideBody">
+		<center>
 		<img src="../img/Slite_ShareSlide.gif" alt="slite share diagram" style='padding: 0px; padding-right:120px; width: 743px; height: 202px'/>
-		<ul>
-	      <li>ONLINE PORTAL FOR <u>LIVE</u> PRESENTATIONS</li>
-	         <ul>
-	           <li>upload, create</li>
-			   <li>present to the whole world live</li>
-			   <li>interact: comment, vote, like, share</li> 
-			   <li>store notes with presentation</li>
-	        </ul>
-	      <!--<li>NEW <b>PATENTED</b> PARADIGM!</li>
-		      <ul>
-		           <li>slide = WEBPAGE = window into the world</li>
-		      </ul>
-	     </li>-->
-		</ul>
+		</center>
+		
+			<div >
+				<ul style='padding-top:30px; display:table; margin:0 auto;'>
+				  <li>PORTAL AND TOOLS FOR <u>LIVE</u> PRESENTATIONS</li>
+					 <!--<ul>
+					   <li>upload, create</li>
+					   <li>present using app remote control</li>
+					   <li>vote, like, share, comment</li> 
+					</ul>-->
+				  <!--<li>NEW <b>PATENTED</b> PARADIGM!</li>
+					  <ul>
+						   <li>slide = WEBPAGE = window into the world</li>
+					  </ul>
+				 </li>-->
+				</ul>
+			</div>
 	</div>
 </center>
 </body>
