--- a/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img5.html
+++ b/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img5.html
@@ -6,506 +6,34 @@
   <title>Slite: Competition</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
   <style>
-    li{
-      padding: 0px;
-    }
+	li {
+		padding-bottom: 10px;
+	}
   </style>
 </head>
 <body>
 <center>
-	<div class="title" style='padding-top: 5px; padding-bottom: 5px; margin-top: 0px; margin-bottom: 0px'>COMPETITION</div>
-
-	<table class=MsoNormalTable border=1 cellspacing=0 cellpadding=0
- style='border-collapse:collapse;border:none'>
- <tr style='height:15.75pt'>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><b><span style='font-size:12.0pt;
-  font-family:"Times New Roman","serif"'>PowerPoint</span></b></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><b><span style='font-size:12.0pt;
-  font-family:"Times New Roman","serif"'>Apple Keynote</span></b></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><b><span style='font-size:12.0pt;
-  font-family:"Times New Roman","serif"'>Google Drive</span></b></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><b><span style='font-size:12.0pt;
-  font-family:"Times New Roman","serif"'>SlideShare</span></b></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><b><span style='font-size:12.0pt;
-  font-family:"Times New Roman","serif"'>i-Clickr</span></b></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><b><span style='font-size:12.0pt;
-  font-family:"Times New Roman","serif"'>Prezi</span></b></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><b><span style='font-size:10.0pt;
-  font-family:"Arial","sans-serif"'>SlideRocket</span></b></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><b><span style='font-size:10.0pt;
-  font-family:"Arial","sans-serif"'>SLITE</span></b></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><b><span style='font-size:10.0pt;font-family:"Times New Roman","serif"'>FEATURES</span></b></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Each slide = web page</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Access Levels</span></p>
-  </td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Live in slide data /
-  statistics</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Live interaction </span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
-  <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Comments: Live / After
-  Meeting</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Share presentation
-  (friends / world)</span></p>
-  </td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Desktop version</span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Live subtitles</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Live translation into
-  any language</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Audio conference
-  inside presentation</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Video conference
-  inside presentation</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Live voting</span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'></span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'></span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'></span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'></span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Decision Making - In
-  slide polls</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>In slide videos</span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Infinite data per slide</span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'></span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'></span></p>
-  </td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'></span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'></span></p>
-  </td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Clicker: next,
-  previous slide</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Virtual Laser Pointer</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Virtual Drawing tool</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
- <tr style='height:15.75pt'>
-  <td>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Arial","sans-serif"'>Voice Control</span></p>
-  </td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td>
-  <p class=MsoNormal align=center style='margin-bottom:0in;margin-bottom:.0001pt;
-  text-align:center;line-height:normal'><span style='font-size:12.0pt;
-  font-family:"Segoe UI Symbol","sans-serif";color:#6AA84F'>&#10004;</span></p>
-  </td>
- </tr>
-</table>
-
+	<div class="title">COMPETITION</div>
+	<div class="slideBody" style='font-size:45px; line-height: 50px'>
+		<ul>
+				<li><u>Competitors:</u></li>
+					<ul>
+						<li>Powerpoint, SlideShare, Prezi, WebEx (...)</li>
+					</ul>
+				<li><u>Differentiators:</u></li>
+				<ul>
+					<li>Live web presentation, not storage and not desktop sharing</li>
+					<li>No hardware, software, login required!</li>
+					<li>All web 2.0 features</li>
+					<li>Infinite amount of data per slide</li>
+				</ul>				
+				<li><u>Advantage / Barriers to entry:</u></li>
+					<ul>
+						<li>1st to Market (because we <b>created new market!</b>)</li>
+						<li>Patented technology allowing to do <i>same features</i> in days when other companies take years</li>
+					</ul>
+		</ul>
+	</div>
 </center>
 </body>
 </html>
