--- a/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img14.html
+++ b/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img14.html
@@ -3,26 +3,97 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Business Model and Monitization</title>
+  <title>Slite: Team</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
+  <style type="text/css">
+  	img{
+  		float:left;
+  	}
+.photos ul {
+          list-style: none;
+
+        }
+
+        .photos ul li { 
+            display: inline;
+            list-style: none;
+            float: left;
+            padding: 0 10px 0 0;
+            text-align:center; 
+        }
+
+        .photos ul li span a {
+            background-color: #fff;
+        }
+
+        .photos ul li a {
+
+          display: block;
+          /*
+          margin-right: 10px;
+          margin-bottom: 7px; */
+          -webkit-transition: all 0.3s linear;
+          -moz-transition: all 0.3s linear;
+          transition: all 0.3s linear;
+        }
+        .photos ul li a:hover {
+          opacity: 1.0;
+        }
+
+        .photos ul li a img {
+          border: 6px solid #e1d9ec;
+		  width: 180px;
+		  height: 180px;
+        } color: #000;
+}
+  </style>
 </head>
 <body>
 <center>
-	<div class="title" style='padding-top: 20px'>BUSINESS MODEL</div>
-	<div class="slideBody">
-		<ul>
-	      <li>SAAS (direct sales from website)</li>
-	      <li>WHITE LABELING (licensing of internal Intranet solution)</li>
+	<div class="title">TEAM</div>
+	<div class="slideBody" style='padding-left: 10px'>
+		<ul style='padding-left: 200px;'>
+	      <li>2 PhDs</li>
+	     <li>60+ yrs software, 30+ yrs business</li>
+		 <!--<ul>
+			<li>Microsoft, Yahoo, KPMG, Arthur Andersen</li>
+		 </ul>-->
+	     <li>Mountain View, California</li>
 		</ul>
-	</div>
-	<div class="title" style='padding-top: 20px'>MONETIZATION</div>
-	<div class="slideBody">
-		<ul>
-	      <li>FREEMEUM (B2C)</li>
-	      <li>IN SLIDE ADS (350 slides / sec)</li>
-	     <li>SECURED ENTERPRISE SOLUTION PACKAGES (B2B)</li>
-		</ul>
-	</div>
+
+
+<center>
+  <div class="photos" style='font-size: 20px; width: 1100px'>
+        <ul style='padding-left: 10px; margin-left:0px;'>
+            <li><span><a href="#"><img src="../img/Team_Jim.jpg"/></a></span>
+            <div class='teamMember'>CEO: Jim</div>
+            <div class='teamMember'>10 yrs business</div>
+            <div class='teamMember'>15 yrs software</div>
+            </li>
+
+            <li><a href="#"><img src="../img/Team_Michael.jpg" /></a>
+            <div class='teamMember'>CTO: Michael</div>
+            <div class='teamMember'>PhD</div>
+            </li>
+
+            <li><span><a href="#"><img src="../img/Team_Andrew.jpg"/></a></span>
+            <div class='teamMember'>Business: Andrew</div>
+            <div class='teamMember'>PhD</div>
+            </li>
+
+            <li><a href="#"><img src="../img/Team_Lev.jpg"/></a>
+            <div class='teamMember'>Developer: Lev</div>
+            <div class='teamMember'>UC Berkeley</div>
+            </li>
+
+            <li><span class='teamMember'><a href="#"><img src="../img/Team_Ksenia.jpg"/></a></span>
+            <div class='teamMember'>Legal: Ksenia</div>
+            <div class='teamMember'>UC Hastings</div>
+            </li>
+        </ul>
+ </div>
+</center>
+
 </center>
 </body>
 </html>
