--- a/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img6.html
+++ b/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img6.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Market</title>
+  <title>Slite: Other companies</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
   <style>
   	ul{
@@ -13,24 +13,11 @@
 </head>
 <body>
 <center>
-	<div class="title" style='padding-bottom: 10px; margin-bottom: 10px;'>UNFAIR ADVANTAGE</div>
-	<div class="slideBody" style='padding-top:10px;'>
-		<ul>
-		  <li>PATENT</li>
-			  <ul>
-			  	<li>allows implementing features in days vs. competitors months/years</li>
-			  </ul>
-			<li>10+ years producing shows</li>
-			<li>Competitors whose <b>sole business</b> is <b>one</b> of our features:</li>
-			<ul>
-				<li>SlideShare: sold for $118.75 million to LinkedIn</li>
-				<li>SlideRocket: raised $39 million, aquired by VMWare, sold to ClearSlide</li>
-				<li>Poll Everywhere: $1.3 million (series A). Funded by YCombinator, DFJ Tamir Fishman Ventures, PhilQuo Ventures.</li>
-				<li>iClicker: funded by Macmillan Ventures</li>
-			</ul>
-
-		</ul>
-	      <img src='../img/slite_competitors.gif' style='float: left; width: 700px; height: 250px; padding: 0px; margin: 0px;'>
+	<div class="title" style='padding-bottom: 10px; margin-bottom: 10px;'>FUNDED COMPANIES - WHOLE BUSINESS <u>ONE</u> OF OUR FEATURES</div>
+	<div class="slideBody" style='padding-top:50px;'>
+	<center>
+	      <img src='../img/slite_competitors.gif' style='width: 900px; height: 500px; padding: 0px; margin: 0px;'>
+  </center>
 	</div>
 </center>
 </body>
