--- a/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img7.html
+++ b/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img7.html
@@ -3,17 +3,15 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Features</title>
+  <title>Slite: Embedded Website 1</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
   <style>
-  	ul{
-  		padding-top:0px; padding-bottom: 0px; margin-bottom: 0px;
-  	}
+    body, html, center {
+      margin: 0; padding: 0; height: 100%; overflow: hidden;
+    }
   </style>
 </head>
 <body>
-<center>
-	<div class="title" style='font-size: 80px; height: 100%; padding-top: 100px'>FEATURES!</div>
-</center>
+ <iframe style="overflow:hidden" height="100%" width="100%" src="http://www.frys.com/product/8259476"></iframe>
 </body>
 </html>
