--- a/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img8.html
+++ b/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img8.html
@@ -12,6 +12,6 @@
   </style>
 </head>
 <body>
- <iframe style="overflow:hidden" height="100%" width="100%" src="http://www.costco.com/Microsoft-Surface-Pro-3-Bundle-%7c-Office-365-Personal-%7c-Intel-Core-i5-%7c-Windows-8.1-Professional.product.100139457.html"></iframe>
+ <iframe style="overflow:hidden" height="100%" width="100%" src="http://www.frys.com/product/8242236"></iframe>
 </body>
 </html>
