--- a/WEBSITE/a1/index.html
+++ b/WEBSITE/a1/index.html
@@ -249,10 +249,8 @@
 	      z-index: 2;
 	    }
 	    
-	    #myCanvas {
+	    #drawCanvas {
 	      position: absolute;
-	      height: 100%;
-	      width: 100%;
 	      border: none;
 	      z-index: 1;
 	      pointer-events: none;
@@ -405,7 +403,7 @@
 
 <body onresize="resizeCanvas()">
 
-    <canvas id="myCanvas" ></canvas>
+    <canvas id="drawCanvas" ></canvas>
     
 	<div id="sliteWatermak">Powered by SLITE.US</div>
 
