Closed Captioning (working)

--- a/WEBSITE/a1/index.html
+++ b/WEBSITE/a1/index.html
@@ -39,6 +39,13 @@
         
     var socket = io.connect('http://slite.elasticbeanstalk.com:1337');
     //var socket = io.connect('http://localhost:1337');
+
+    socket.on('ccBroadcast', function (data) {	
+    		//alert("JD: ccBroadcast text="+data.hello);
+    		$('#closedCaptioningPanel').hide();
+    		$('#closedCaptioningPanel').html( data.hello );
+    		$('#closedCaptioningPanel').show(400).delay(2000).fadeOut(400);
+    });
     
     socket.on('news', function (data) {	
 
@@ -364,6 +371,17 @@
 			.experiment{
 				border-style: none;
 			}
+
+			#closedCaptioningPanel{
+				position: fixed;
+				bottom: 5%;
+				background-color: black;
+				color: white;
+				width: 100%;
+				text-align: center;
+				font-size: 40px;
+				line-height: 40px;
+			}
 	
 	</style>
 
@@ -414,6 +432,9 @@
 	<div id="comments">
 			<!-- Begin Comments JavaScript Code --><script type="text/javascript" async>function ajaxpath_5434a641072d9(url){return window.location.href == '' ? url : url.replace('&s=','&s=' + escape(window.location.href));}(function(){document.write('<div id="fcs_div_5434a641072d9"><a title="free comment script" href="http://www.freecommentscript.com">&nbsp;&nbsp;<b>Free HTML User Comments</b>...</a></div>');fcs_5434a641072d9=document.createElement('script');fcs_5434a641072d9.type="text/javascript";fcs_5434a641072d9.src=ajaxpath_5434a641072d9("http://www.freecommentscript.com/GetComments2.php?p=5434a641072d9&s=&Size=10#!5434a641072d9");setTimeout("document.getElementById('fcs_div_5434a641072d9').appendChild(fcs_5434a641072d9)",1);})();</script><noscript><div><a href="http://www.freecommentscript.com" title="free html user comment box">Free Comment Script</a></div></noscript><!-- End Comments JavaScript Code -->
 	</div> 
+
+	<div id="closedCaptioningPanel"></div>
+
 	<div id="commentsPanel"></div>
 	
 	<div id="videochatpanel"></div> 
