--- a/WEBSITE/a1/index.html
+++ b/WEBSITE/a1/index.html
@@ -60,8 +60,6 @@
       switch(button)
       {
         case -102: {
-          //window.location.href = "index.html";
-            //window.location.href = "http://localhost:1337/TEST/MA/Weather_delivery.pptx.html/Weather_delivery.html";
           slider.goTo(0);
           break;
         }
@@ -86,20 +84,6 @@
         }
       }
 		
-      /*if(button == -1){
-        slider.toggleVideo();
-      }else{
-      
-        slider.stopVideo();
-        slider.goTo(button);
-        slider.playVideo();
-      }*/
-      
-      /*if(data && (data.hello % 2 == 0)){
-        document.body.style.background = "red";
-      }else{
-        document.body.style.background = "blue";
-      }*/
       socket.emit('my other event', { my: 'data' });
     });
 
@@ -685,7 +669,7 @@
 						//var slide_html_path = data.filename;
 						var slide_html_path= "PPT/SliteShow_PitchDeck.pptx";
 						if (slide == 1) slide_html_path += ".html/SliteShow_PitchDeck.html";       
-						else slide_html_path += ".html/img"+slide+".html";
+						else slide_html_path += ".html/img"+slide+".html" + "?ts=" +  (new Date().getTime()); //slide url with added time stamp to stop caching
 						var slide_html= "<div style='text-align:center' id=slide class='rsContent'>" 
 							+ "<iframe src='"+slide_html_path+"' width='100%' height='100%' seamless> </iframe>"
 							+ "<div class='rsTmb'>"
