--- a/AWS_Website/about.html
+++ b/AWS_Website/about.html
@@ -59,7 +59,7 @@ div.WordSection1
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                       </button>
-                      <a href="http://slite.us" class="logo"><img src="img/logo.png"></a>
+                      <a href="/" class="logo"><img src="img/logo.png"></a>
                     </div>
 
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
