--- a/AWS_Website/index.html
+++ b/AWS_Website/index.html
@@ -122,6 +122,8 @@
         <script>window.jQuery || document.write('<script src="js/jquery-2.1.1.min.js"><\/script>')</script>-->
         <script src="js/bootstrap.js"></script>
         <!--<script src="js/holder.js"></script>-->
+        <script src="http://localhost:1337/socket.io/socket.io.js"></script>
+        <script src="js/client.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
