Upload, hashing and conversion now work on AWS server.
The trick was to use OpenOffice 4.2 instead of the latest 4.3!

--- a/AWS_Website/signup.html
+++ b/AWS_Website/signup.html
@@ -68,7 +68,7 @@
         <section class="middle">
             <div class="container-fluid">
                 
-                <form class="m-form-signin" role="form" action="/account" method="post">
+                <form class="m-form-signin" role="form" action="/signup" method="post">
                     <h1>Sign up</h1>
                     <h2>Create your personal account </h2>
                     <div class="form-group">
