--- a/AWS_Website/remote/index.html
+++ b/AWS_Website/remote/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" content="user-scalable=yes">
     <title>SENDER</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
-    <script src="http://localhost:1337/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="cordova.js"></script>
+    <script src="http://slite-dev.elasticbeanstalk.com:1337/socket.io/socket.io.js"></script>
     <script src="./js/jquery-2.0.3.min.js"></script>
     <script src="./js/speechRecognizer.js"></script>
     <script src="./js/volumeButtonControl.js"></script>
@@ -16,8 +15,8 @@
     <script src="./js/thumbs.0.6.0.min.js"></script>
 
     <script>
-      //var socket = io.connect('http://slite.elasticbeanstalk.com:1337');
-      var socket = io.connect('http://localhost:1337');
+      var socket = io.connect('http://slite-dev.elasticbeanstalk.com:1337');
+      //var socket = io.connect('http://localhost:1337');
     </script>
     
 	</head>
@@ -30,7 +29,7 @@
     ><div class="UI midRow leftCol" id="notes">1: Beginning slide, or should I say 'slite'. Get ready to see powerpoint with all the powers of the web.</div
     ><div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)"
         ><div id="overlay"></div
-        ><iframe id="theIframe" class="frame" src="http://localhost:8081/A1" seamless></iframe
+        ><iframe id="theIframe" class="frame" src="http://www.slite.us/A1" seamless></iframe
     ></div
     ><div class="UI midRow rightCol" id="otherSlides">
         <button></button>
